--- a/image_Downloader.ipynb
+++ b/image_Downloader.ipynb
@@ -28,18 +28,18 @@
     "def save_images(urls,titles):\n",
     "    global query\n",
     "    image=[]\n",
-    "    if not os.path.exists(query):\n",
+    "    if not os.path.exists(query): # check existence of file \n",
     "        os.makedirs(query)\n",
-    "    n=int(input(\" Enter no of titles to download out of \"+str(len(urls))+\"  : \"))\n",
+    "    n=int(input(\" Enter no of titles to download out of \"+str(len(urls))+\"  : \")) # n topic download \n",
     "    for title,urllist in zip(titles[:n],urls[:n]):\n",
     "        if title !='Home':\n",
-    "            title=str(title['aria-label'])\n",
+    "            title=str(title['aria-label']) # naming folder based on topic on google \n",
     "        print('Downloading  : '+title+'....')\n",
     "        for i,url in enumerate(urllist):\n",
     "            if not os.path.exists(query+'/'+title):\n",
     "                os.makedirs(query+'/'+title)\n",
     "            try:\n",
-    "                image=Image.open(urllib.request.urlopen(url['src']))\n",
+    "                image=Image.open(urllib.request.urlopen(url['src'])) # opening url of image \n",
     "            except:\n",
     "                try:\n",
     "                    image=Image.open(urllib.request.urlopen(url['data-src']))\n",
@@ -47,19 +47,19 @@
     "                    pass\n",
     "            if len(np.array(image))>0:\n",
     "                try:\n",
-    "                    image.save(query+'/'+title+'/'+url['alt']+str(i)+'.jpg')\n",
+    "                    image.save(query+'/'+title+'/'+url['alt']+str(i)+'.jpg') # saving image into topic folder \n",
     "                except:\n",
     "                    pass\n",
     "        print(\"Saved image : \"+str(i))\n",
     "        \n",
     "                \n",
     "# scrolling and going upto last image then scrapping all urls of images \n",
-    "def images(browser):\n",
+    "def images(browser):  # scroll upto end of page for any topic of image \n",
     "    found=1\n",
     "    while(found):\n",
     "        try:\n",
     "            count=0\n",
-    "            while(count<6):\n",
+    "            while(count<6): # button show more results n page consist upto 6 scroll \n",
     "                try:\n",
     "                    browser.execute_script(\"window.scrollTo(0,document.body.scrollHeight)\")\n",
     "                    time.sleep(5)\n",
@@ -67,14 +67,14 @@
     "                    pass\n",
     "                count+=1\n",
     "            time.sleep(3)\n",
-    "            browser.find_element_by_class_name('mye4qd').click()\n",
+    "            browser.find_element_by_class_name('mye4qd').click() # clicking on s\n",
     "            time.sleep(5)\n",
     "        except:\n",
     "            found=0\n",
     "    soup=BeautifulSoup(browser.page_source,'lxml')\n",
     "    img_urls=[img for img in soup.find_all('img',class_='rg_i Q4LuWd')]\n",
     "    return img_urls\n",
-    "def clean_garbage_files():\n",
+    "def clean_garbage_files(): # cleaning all which are not image from directory \n",
     "    global query\n",
     "    root=query\n",
     "    for folder in os.listdir(root):\n",
@@ -84,28 +84,29 @@
     "                    os.remove(root+'/'+folder+'/'+image)\n",
     "                except:\n",
     "                    pass\n",
-    "                \n",
+    "\n",
+    "# Accessing all urls available for given input \n",
     "def find(query='flower'):\n",
-    "    global titles\n",
+    "    global titles  # taking title and total_urls as global so interuption cannot affect retrieved urls \n",
     "    global total_urls\n",
-    "    browser=webdriver.Chrome('./chromedriver')\n",
+    "    browser=webdriver.Chrome('./chromedriver')  # open webdriver file available in device for chrome\n",
     "    browser.get('https://www.google.com/')\n",
     "#     browser.fullscreen_window()\n",
-    "    search=browser.find_element_by_xpath('//*[@id=\"tsf\"]/div[2]/div[1]/div[1]/div/div[2]/input')\n",
+    "    search=browser.find_element_by_xpath('//*[@id=\"tsf\"]/div[2]/div[1]/div[1]/div/div[2]/input')#google input automation\n",
     "    search.send_keys(query+' image')\n",
     "    time.sleep(1)\n",
     "    search.send_keys(Keys.ENTER)\n",
     "    time.sleep(1)\n",
-    "    browser.find_element_by_class_name('Q2MMlc').click()\n",
+    "    browser.find_element_by_class_name('Q2MMlc').click()  # clicking so more results for input query on google images\n",
     "    time.sleep(1)\n",
     "#   Accessing image home page base\n",
-    "    titles.append('Home')\n",
-    "    total_urls.append(list(set(images(browser))))\n",
-    "    soup=BeautifulSoup(browser.page_source,'lxml')\n",
+    "    titles.append('Home') # for home url \n",
+    "    total_urls.append(list(set(images(browser)))) # appending all topics available on google \n",
+    "    soup=BeautifulSoup(browser.page_source,'lxml') # scrapping all urls on home page\n",
     "    titles.extend([link for link in soup.find_all('a',class_='F9PbJd IJRrpb xKddTc')])\n",
     "    browser.close()\n",
     "    # Accessing images topic based \n",
-    "    for url in titles[1:]:\n",
+    "    for url in titles[1:]:  # for retriving all topics url \n",
     "        browser=webdriver.Chrome('./chromedriver')\n",
     "        browser.get('https://www.google.com'+url['href'])\n",
     "#         browser.fullscreen_window()\n",
