--- a/image_Downloader.ipynb
+++ b/image_Downloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,15 @@
     "titles=[]\n",
     "# Saving all exteracted images \n",
     "\n",
-    "def save_images(urls,titles):\n",
-    "    global query\n",
+    "def save_images(urls,titles,query):\n",
     "    image=[]\n",
     "    if not os.path.exists(query): # check existence of file \n",
     "        os.makedirs(query)\n",
-    "    n=int(input(\" Enter no of titles to download out of \"+str(len(urls))+\"  : \")) # n topic download \n",
-    "    for title,urllist in zip(titles[:n],urls[:n]):\n",
+    "#     n=int(input(\" Enter no of titles to download out of \"+str(len(urls))+\"  : \")) # n topic download \n",
+    "    for title,urllist in zip(titles[:1],urls[:1]):\n",
     "        if title !='Home':\n",
     "            title=str(title['aria-label']) # naming folder based on topic on google \n",
-    "        print('Downloading  : '+title+'....')\n",
+    "        print('Downloading  : '+title+' under '+query)\n",
     "        for i,url in enumerate(urllist):\n",
     "            if not os.path.exists(query+'/'+title):\n",
     "                os.makedirs(query+'/'+title)\n",
@@ -47,7 +46,7 @@
     "                    pass\n",
     "            if len(np.array(image))>0:\n",
     "                try:\n",
-    "                    image.save(query+'/'+title+'/'+url['alt']+str(i)+'.jpg') # saving image into topic folder \n",
+    "                    image.save(query+'/'+title+'/'+url['alt']+str(i)+'.png') # saving image into topic folder \n",
     "                except:\n",
     "                    pass\n",
     "        print(\"Saved image : \"+str(i))\n",
@@ -67,15 +66,14 @@
     "                    pass\n",
     "                count+=1\n",
     "            time.sleep(3)\n",
-    "            browser.find_element_by_class_name('mye4qd').click() # clicking on s\n",
+    "            browser.find_element_by_class_name('mye4qd').click() # clicking on show more results \n",
     "            time.sleep(5)\n",
     "        except:\n",
     "            found=0\n",
     "    soup=BeautifulSoup(browser.page_source,'lxml')\n",
     "    img_urls=[img for img in soup.find_all('img',class_='rg_i Q4LuWd')]\n",
     "    return img_urls\n",
-    "def clean_garbage_files(): # cleaning all which are not image from directory \n",
-    "    global query\n",
+    "def clean_garbage_files(query): # cleaning all which are not image from directory \n",
     "    root=query\n",
     "    for folder in os.listdir(root):\n",
     "        for image in os.listdir(root+'/'+folder):\n",
@@ -91,8 +89,8 @@
     "    global total_urls\n",
     "    browser=webdriver.Chrome('./chromedriver')  # open webdriver file available in device for chrome\n",
     "    browser.get('https://www.google.com/')\n",
-    "#     browser.fullscreen_window()\n",
-    "    search=browser.find_element_by_xpath('//*[@id=\"tsf\"]/div[2]/div[1]/div[1]/div/div[2]/input')#google input automation\n",
+    "#   browser.fullscreen_window()\n",
+    "    search=browser.find_element_by_class_name('gLFyf')#google input automation\n",
     "    search.send_keys(query+' image')\n",
     "    time.sleep(1)\n",
     "    search.send_keys(Keys.ENTER)\n",
@@ -105,11 +103,11 @@
     "    soup=BeautifulSoup(browser.page_source,'lxml') # scrapping all urls on home page\n",
     "    titles.extend([link for link in soup.find_all('a',class_='F9PbJd IJRrpb xKddTc')])\n",
     "    browser.close()\n",
-    "    # Accessing images topic based \n",
+    "#   Accessing images topic based \n",
     "    for url in titles[1:]:  # for retriving all topics url \n",
     "        browser=webdriver.Chrome('./chromedriver')\n",
     "        browser.get('https://www.google.com'+url['href'])\n",
-    "#         browser.fullscreen_window()\n",
+    "#       browser.fullscreen_window()\n",
     "        time.sleep(1)\n",
     "        total_urls.append(list(set(images(browser))))\n",
     "        browser.close()\n",
@@ -119,39 +117,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "descending triangle\n"
+      "string indices must be integers\n",
+      "Downloading  : Home under Sukhasana\n"
      ]
     }
    ],
    "source": [
-    "if __name__=='__main__':\n",
-    "    query=input()\n",
+    "def google_image(query):\n",
+    "#     query=input()\n",
     "    try:\n",
     "        find(query)\n",
-    "    except:\n",
-    "        pass\n",
-    "    save_images(total_urls,titles)\n",
-    "    clean_garbage_files()"
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "    save_images(total_urls,titles,query)\n",
+    "    clean_garbage_files(query)\n",
+    "google_image('Sukhasana')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -173,49 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +188,20 @@
     "#     total_urls.extend(images(browser))\n",
     "#     browser.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
